# datacube

./: .gitignore  .pre-commit-config.yaml  .template.env  LICENSE  README.md  pyproject.toml
deployment/: .gitignore  .terraform.lock.hcl  README.md  docker-compose.yml  main.tf  outputs.tf  provider.tf  template.terraform.tfvars.json  variables.tf
experiments/: extract-siret.py  match-emplois-domains.py  match-ic-domains.py  match-ic-sirets.py  requirements.in  requirements.txt
experiments/dc_utils/: api_entreprise.py  csv.py  google.py  recherche_entreprise.py
experiments/id_pdi/: README.md  (+1 more)
spock/: .buildpacks  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  cron.json  docker-compose.yml  pyproject.toml  resetdb.sh
spock/.github/workflows/: ci.yml
spock/config/: urls.py  wsgi.py
spock/config/settings/: base.py  dev.py  test.py
spock/requirements/: base.in  base.txt  dev.txt  test.in  test.txt
spock/spock/company_score/: admin.py  apps.py  google.py  models.py
spock/spock/company_score/fixtures/: resolved_domains.json
spock/spock/company_score/management/commands/: compute_score.py  resolve_domain_sirens.py  resolve_siren_companies.py  sync_if_conventions.py  sync_le_marche_tenders.py
spock/spock/company_score/migrations/: 0001_initial.py
spock/spock/templates/: 500.html
spock/spock/users/: admin.py  apps.py
spock/spock/users/migrations/: 0001_initial.py
spock/spock/www/: error.py
spock/tests/: conftest.py
spock/tests/company_score/: test_sync.py
spock/tests/users/: factories.py  test_models.py
(+1 files in other folders)
